--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
@@ -111,7 +111,10 @@
   name: lucens grip
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/Grip/lucens_grip.rsi
+    sprite: _CP14/Objects/ModularTools/Grip/wooden_grip.rsi
+    layers:
+    - state: icon
+      color: "#0398fc"
     state: icon
   - type: CP14ModularCraftStartPoint
     startProtoPart: CP14ModularGripLucens
@@ -134,8 +137,9 @@
   name: iron grip
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/Grip/iron_grip.rsi
-    state: icon
+    sprite: _CP14/Objects/ModularTools/Grip/metall_grip.rsi
+    layers:
+    - state: icon
   - type: CP14ModularCraftStartPoint
     startProtoPart: CP14ModularGripIron
   - type: Destructible
@@ -153,35 +157,14 @@
 
 - type: entity
   parent: CP14ModularGripShort
-  id: CP14ModularGripMithril
-  name: mithril grip
-  components:
-  - type: Sprite
-    sprite: _CP14/Objects/ModularTools/Grip/mithril_grip.rsi
-    state: icon
-  - type: CP14ModularCraftStartPoint
-    startProtoPart: CP14ModularGripMithril
-  - type: Destructible
-    thresholds:
-    - trigger:
-        !type:DamageTrigger
-        damage: 120 #x2.4 durability
-      behaviors:
-      - !type:PlaySoundBehavior
-        sound:
-          collection: MetalBreak
-      - !type:CP14ModularDisassembleBehavior
-      - !type:DoActsBehavior
-        acts: ["Destruction"]
-
-- type: entity
-  parent: CP14ModularGripShort
   id: CP14ModularGripGolden
   name: golden grip
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/Grip/gold_grip.rsi
-    state: icon
+    sprite: _CP14/Objects/ModularTools/Grip/metall_grip.rsi
+    layers:
+    - state: icon
+      color: "#ffaf47"
   - type: CP14ModularCraftStartPoint
     startProtoPart: CP14ModularGripGolden
   - type: Destructible
@@ -203,8 +186,10 @@
   name: copper grip
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/Grip/copper_grip.rsi
-    state: icon
+    sprite: _CP14/Objects/ModularTools/Grip/metall_grip.rsi
+    layers:
+    - state: icon
+      color: "#bd712f"
   - type: CP14ModularCraftStartPoint
     startProtoPart: CP14ModularGripCopper
   - type: Destructible
@@ -212,6 +197,31 @@
     - trigger:
         !type:DamageTrigger
         damage: 70 #~x0.66 durability
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+      - !type:CP14ModularDisassembleBehavior
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
+
+- type: entity
+  parent: CP14ModularGripShort
+  id: CP14ModularGripMithril
+  name: mithril grip
+  components:
+  - type: Sprite
+    sprite: _CP14/Objects/ModularTools/Grip/metall_grip.rsi
+    layers:
+    - state: icon
+      color: "#45d2a4"
+  - type: CP14ModularCraftStartPoint
+    startProtoPart: CP14ModularGripMithril
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 120 #x2.4 durability
       behaviors:
       - !type:PlaySoundBehavior
         sound:
@@ -250,8 +260,10 @@
   name: long lucens grip
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/GripLong/lucens_grip_long.rsi
-    state: icon
+    sprite: _CP14/Objects/ModularTools/GripLong/wooden_grip_long.rsi
+    layers:
+    - state: icon
+      color: "#0398fc"
   - type: CP14ModularCraftStartPoint
     startProtoPart: CP14ModularGripLucensLong
   - type: Destructible
@@ -273,7 +285,7 @@
   name: long iron grip
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/GripLong/iron_grip_long.rsi
+    sprite: _CP14/Objects/ModularTools/GripLong/metall_grip_long.rsi
     state: icon
   - type: CP14ModularCraftStartPoint
     startProtoPart: CP14ModularGripIronLong
@@ -282,29 +294,6 @@
     - trigger:
         !type:DamageTrigger
         damage: 100 #x2 durability
-      behaviors:
-      - !type:PlaySoundBehavior
-        sound:
-          collection: MetalBreak
-      - !type:CP14ModularDisassembleBehavior
-      - !type:DoActsBehavior
-        acts: ["Destruction"]
-
-- type: entity
-  parent: CP14ModularGripLong
-  id: CP14ModularGripMithrilLong
-  name: long mithril grip
-  components:
-  - type: Sprite
-    sprite: _CP14/Objects/ModularTools/GripLong/mithril_grip_long.rsi
-    state: icon
-  - type: CP14ModularCraftStartPoint
-    startProtoPart: CP14ModularGripMithrilLong
-  - type: Destructible
-    thresholds:
-    - trigger:
-        !type:DamageTrigger
-        damage: 120 #x2.4 durability
       behaviors:
       - !type:PlaySoundBehavior
         sound:
@@ -329,8 +318,10 @@
   name: long golden grip
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/GripLong/gold_grip_long.rsi
-    state: icon
+    sprite: _CP14/Objects/ModularTools/GripLong/metall_grip_long.rsi
+    layers:
+    - state: icon
+      color: "#ffaf47"
   - type: CP14ModularCraftStartPoint
     startProtoPart: CP14ModularGripGoldLong
   - type: Destructible
@@ -352,8 +343,10 @@
   name: long copper grip
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/GripLong/copper_grip_long.rsi
-    state: icon
+    sprite: _CP14/Objects/ModularTools/GripLong/metall_grip_long.rsi
+    layers:
+    - state: icon
+      color: "#bd712f"
   - type: CP14ModularCraftStartPoint
     startProtoPart: CP14ModularGripCopperLong
   - type: Destructible
@@ -361,6 +354,32 @@
     - trigger:
         !type:DamageTrigger
         damage: 70 #~x0.66 durability
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+      - !type:CP14ModularDisassembleBehavior
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
+
+
+- type: entity
+  parent: CP14ModularGripLong
+  id: CP14ModularGripMithrilLong
+  name: long mithril grip
+  components:
+  - type: Sprite
+    sprite: _CP14/Objects/ModularTools/GripLong/metall_grip_long.rsi
+    layers:
+    - state: icon
+      color: "#45d2a4"
+  - type: CP14ModularCraftStartPoint
+    startProtoPart: CP14ModularGripMithrilLong
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 120 #x2.4 durability
       behaviors:
       - !type:PlaySoundBehavior
         sound:
