--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/sickle.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/sickle.yml
@@ -32,7 +32,7 @@
   - !type:Inherit
     copyFrom:
     - BaseBladeSickle
-    - BaseWeaponIron
+    - BaseBladeIron
 
 - type: modularPart
   id: BladeGoldSickle
@@ -44,7 +44,7 @@
   - !type:Inherit
     copyFrom:
     - BaseBladeSickle
-    - BaseWeaponGold
+    - BaseBladeGold
 
 - type: modularPart
   id: BladeCopperSickle
@@ -56,7 +56,7 @@
   - !type:Inherit
     copyFrom:
     - BaseBladeSickle
-    - BaseWeaponCopper
+    - BaseBladeCopper
 
 - type: modularPart
   id: BladeMithrilSickle
@@ -68,4 +68,4 @@
   - !type:Inherit
     copyFrom:
     - BaseBladeSickle
-    - BaseWeaponMithril
+    - BaseBladeMithril
