--- a/Resources/Prototypes/_CP14/Entities/Effects/visual_effect.yml
+++ b/Resources/Prototypes/_CP14/Entities/Effects/visual_effect.yml
@@ -44,7 +44,7 @@
   - type: TimedDespawn
     lifetime: 0.4
   - type: Sprite
-    drawdepth: Effects
+    drawdepth: Items
     sprite: _CP14/Effects/dust.rsi
     state: dust
   - type: EffectVisuals
