--- a/Resources/Prototypes/_CP14/Entities/Structures/Decorations/statues.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Decorations/statues.yml
@@ -132,3 +132,84 @@
     - state: anim
       map: ["garland"]
       visible: false
+
+- type: entity
+  id: CP14StatueAngel
+  parent: BaseStructure
+  name: angel statue
+  description: A divine statue of a praying angel.
+  categories: [ ForkFiltered ]
+  suffix: Stone
+  components:
+  - type: Sprite
+    noRot: true
+    sprite: _CP14/Structures/Decoration/angel_statue.rsi
+    layers:
+    - state: statue1
+    - state: glow
+      map: ["ritual"]
+      visible: false
+      shader: unshaded
+    drawdepth: Mobs
+    offset: "0.0,0.5"
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.45,-0.45,0.45,0.45"
+        density: 60
+        mask:
+        - MachineMask
+        layer:
+        - MachineLayer
+  - type: Damageable
+    damageContainer: StructuralInorganic
+    damageModifierSet: Rock
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 125
+      behaviors:
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
+      - !type:PlaySoundBehavior
+        sound:
+          path: /Audio/Effects/break_stone.ogg
+          params:
+            volume: -4
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          CP14StoneBlock1:
+            min: 4
+            max: 5
+  - type: CP14MagicRitual
+    startPhase: CP14_NeutralCluster_Root
+  - type: Appearance
+
+- type: entity
+  id: CP14StatueAngelMarble
+  parent: CP14StatueAngel
+  suffix: Marble
+  components:
+  - type: Sprite
+    layers:
+    - state: statue2
+    - state: glow
+      map: ["ritual"]
+      visible: false
+      shader: unshaded
+
+- type: entity
+  id: CP14StatueAngelLimestone
+  parent: CP14StatueAngel
+  suffix: Limestone
+  components:
+  - type: Sprite
+    layers:
+    - state: statue3
+    - state: glow
+      map: ["ritual"]
+      visible: false
+      shader: unshaded
