--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/elf.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/elf.yml
@@ -19,15 +19,61 @@
   - type: Body
     prototype: CP14Elf
     requiredLegs: 2
-  - type: Inventory
-    templateId: CP14Human
   - type: Bloodstream
     bloodReagent: CP14BloodElf
+  - type: Inventory
+    templateId: CP14Human
+    displacements:
+      cloak:
+        sizeMaps:
+          32:
+            sprite: _CP14/Mobs/Species/Human/displacement.rsi
+            state: female_cloak
+      pants:
+        sizeMaps:
+          32:
+            sprite: _CP14/Mobs/Species/Human/displacement.rsi
+            state: female_pants
+      shirt:
+        sizeMaps:
+          32:
+            sprite: _CP14/Mobs/Species/Elf/displacement.rsi
+            state: male_shirt
+    femaleDisplacements:
+      shirt:
+        sizeMaps:
+          32:
+            sprite: _CP14/Mobs/Species/Elf/displacement.rsi
+            state: female_shirt
 
 - type: entity
   parent: CP14BaseSpeciesDummy
   id: CP14MobElfDummy
   categories: [ HideSpawnMenu ]
   components:
-    - type: HumanoidAppearance
-      species: CP14Elf
+  - type: HumanoidAppearance
+    species: CP14Elf
+  - type: Inventory
+    templateId: CP14Human
+    displacements:
+      cloak:
+        sizeMaps:
+          32:
+            sprite: _CP14/Mobs/Species/Human/displacement.rsi
+            state: female_cloak
+      pants:
+        sizeMaps:
+          32:
+            sprite: _CP14/Mobs/Species/Human/displacement.rsi
+            state: female_pants
+      shirt:
+        sizeMaps:
+          32:
+            sprite: _CP14/Mobs/Species/Human/displacement.rsi
+            state: male_shirt
+    femaleDisplacements:
+      shirt:
+        sizeMaps:
+          32:
+            sprite: _CP14/Mobs/Species/Human/displacement.rsi
+            state: female_shirt
