base silva species

--- a/Resources/Prototypes/_CP14/Datasets/Names/species-names.yml
+++ b/Resources/Prototypes/_CP14/Datasets/Names/species-names.yml
@@ -92,3 +92,17 @@
   values:
     prefix: cp14-species-name-goblin-female-first-
     count: 24
+
+# Silva
+
+- type: localizedDataset
+  id: CP14_Names_Silva_Male_First
+  values:
+    prefix: cp14-species-name-silva-male-first-
+    count: 20
+
+- type: localizedDataset
+  id: CP14_Names_Silva_Female_First
+  values:
+    prefix: cp14-species-name-silva-female-first-
+    count: 20
