plant growth spell, silva photosyntesis

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_gift.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_gift.yml
@@ -43,6 +43,7 @@
     event: !type:CP14ToggleableEntityTargetActionEvent
       cooldown: 5
       castTime: 10
+      breakOnMove: true
 
 - type: entity
   id: CP14RuneManaGift
