--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/demiplane.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/demiplane.yml
@@ -46,6 +46,7 @@
         - id: CP14SpellScrollEarthWall
         - id: CP14SpellScrollFlashLight
         - id: CP14SpellScrollWaterCreation
+        - id: CP14SpellScrollPlantGrowth
       - id: CP14EnergyCrystalSmall
       - id: CP14BaseSharpeningStone
       - id: CP14GlassShard
