--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/silva.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/silva.yml
@@ -64,6 +64,12 @@
     spawned:
       - id: FoodMeatHuman
         amount: 5
+  - type: CP14MagicEnergyPhotosynthesis # Silva special feature
+  - type: CP14SpellStorage
+    spells:
+    - CP14ActionSpellPlantGrowthSilva
+  - type: CP14MagicEnergyDraw
+    enable: false
   - type: Body
     prototype: CP14Silva
     requiredLegs: 2
