playable species guidebook

--- a/Resources/Prototypes/_CP14/Guidebook/Eng/alchemy.yml
+++ b/Resources/Prototypes/_CP14/Guidebook/Eng/alchemy.yml
@@ -35,3 +35,19 @@
   name: Imperial laws
   text: "/ServerInfo/_CP14/Guidebook_EN/ImperialLaws.xml"
   filterEnabled: True
+
+- type: guideEntry
+  crystallPunkAllowed: true
+  id: CP14_EN_Species
+  name: Playable species
+  text: "/ServerInfo/_CP14/Guidebook_EN/Species.xml"
+  children:
+  - CP14_EN_Silva
+  filterEnabled: True
+
+- type: guideEntry
+  crystallPunkAllowed: true
+  id: CP14_EN_Silva
+  name: Silva
+  text: "/ServerInfo/_CP14/Guidebook_EN/SpeciesTabs/Silva.xml"
+  filterEnabled: True
