--- a/Resources/Prototypes/_CP14/Guidebook/entry.yml
+++ b/Resources/Prototypes/_CP14/Guidebook/entry.yml
@@ -5,6 +5,7 @@
   name: Welcome to CrystallEdge
   text: "/ServerInfo/_CP14/Guidebook_EN/Welcome.xml"
   children:
+  - CP14_EN_Species
   - CP14_EN_Alchemy
   - CP14_EN_Demiplanes
   - CP14_EN_Imperial_Laws
@@ -16,6 +17,7 @@
   name: Добро пожаловать в CrystallEdge
   text: "/ServerInfo/_CP14/Guidebook_RU/Welcome.xml"
   children:
+  - CP14_RU_Species
   - CP14_RU_Alchemy
   - CP14_RU_Demiplanes
   - CP14_RU_Imperial_Laws
