--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/silva.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/silva.yml
@@ -66,6 +66,7 @@
         amount: 5
   - type: CP14MagicEnergyPhotosynthesis # Silva special feature
   - type: CP14SpellStorage
+    grantAccessToSelf: true
     spells:
     - CP14ActionSpellPlantGrowthSilva
   - type: CP14MagicEnergyDraw
