--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/elf.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/elf.yml
@@ -21,6 +21,16 @@
     requiredLegs: 2
   - type: Bloodstream
     bloodReagent: CP14BloodElf
+  - type: CP14MagicEnergyContainer #BIG mana container
+    maxEnergy: 500
+    energy: 250
+  - type: CP14MagicEnergyDraw #No passive mana regen
+    energy: 0.5
+    delay: 10
+  - type: CP14SpellStorage
+    grantAccessToSelf: true
+    spells:
+    - CP14ActionSpellManaConsumeElf
   - type: Inventory
     templateId: CP14Human
     displacements:
