--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/tiefling.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/tiefling.yml
@@ -22,6 +22,21 @@
   - type: Wagging
   - type: Bloodstream
     bloodReagent: CP14BloodTiefling
+  - type: Damageable
+    damageContainer: Biological
+    damageModifierSet: CP14Tiefling
+  - type: PassiveDamage
+    damageCap: 65
+    allowedStates:
+    - Alive
+    - Critical
+    damage:
+      types:
+        Heat: -0.14 # Around 8 damage a minute healed
+  - type: CP14MagicEnergyFromDamage
+    damage:
+      Heat: 4 #Magic regen from fire
+      Cold: -2
   - type: Inventory
     templateId: CP14Human
     femaleDisplacements:
