--- a/Resources/Prototypes/_CP14/Guidebook/Ru/species.yml
+++ b/Resources/Prototypes/_CP14/Guidebook/Ru/species.yml
@@ -4,8 +4,17 @@
   name: Играбельные расы
   text: "/ServerInfo/_CP14/Guidebook_RU/Species.xml"
   children:
-  - CP14_RU_Elf
+  - CP14_RU_Human
   - CP14_RU_Silva
+  - CP14_RU_Elf
+  - CP14_RU_Tiefling
+  filterEnabled: True
+
+- type: guideEntry
+  crystallPunkAllowed: true
+  id: CP14_RU_Human
+  name: Человек
+  text: "/ServerInfo/_CP14/Guidebook_RU/SpeciesTabs/Human.xml"
   filterEnabled: True
 
 - type: guideEntry
@@ -20,4 +29,11 @@
   id: CP14_RU_Elf
   name: Эльф
   text: "/ServerInfo/_CP14/Guidebook_RU/SpeciesTabs/Elf.xml"
+  filterEnabled: True
+
+- type: guideEntry
+  crystallPunkAllowed: true
+  id: CP14_RU_Tiefling
+  name: Тифлинг
+  text: "/ServerInfo/_CP14/Guidebook_RU/SpeciesTabs/Tiefling.xml"
   filterEnabled: True
