--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/tiefling.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/tiefling.yml
@@ -40,6 +40,10 @@
     damage:
       Heat: 1 #Magic regen from fire
       Cold: -1
+  - type: CP14MagicManacostModify
+    globalModifier: 1.2
+    modifiers:
+      Fire: 0.5
   - type: CP14SpellStorage
     grantAccessToSelf: true
     spells:
