--- a/Resources/Prototypes/_CP14/Guidebook/Eng/species.yml
+++ b/Resources/Prototypes/_CP14/Guidebook/Eng/species.yml
@@ -8,6 +8,7 @@
   - CP14_EN_Silva
   - CP14_EN_Elf
   - CP14_EN_Tiefling
+  - CP14_EN_Goblin
   filterEnabled: True
 
 - type: guideEntry
@@ -36,4 +37,11 @@
   id: CP14_EN_Tiefling
   name: Tiefling
   text: "/ServerInfo/_CP14/Guidebook_EN/SpeciesTabs/Tiefling.xml"
+  filterEnabled: True
+
+- type: guideEntry
+  crystallPunkAllowed: true
+  id: CP14_EN_Goblin
+  name: Goblin
+  text: "/ServerInfo/_CP14/Guidebook_EN/SpeciesTabs/Goblin.xml"
   filterEnabled: True
