--- a/Resources/Prototypes/_CP14/Guidebook/Ru/species.yml
+++ b/Resources/Prototypes/_CP14/Guidebook/Ru/species.yml
@@ -8,6 +8,7 @@
   - CP14_RU_Silva
   - CP14_RU_Elf
   - CP14_RU_Tiefling
+  - CP14_RU_Goblin
   filterEnabled: True
 
 - type: guideEntry
@@ -36,4 +37,11 @@
   id: CP14_RU_Tiefling
   name: Тифлинг
   text: "/ServerInfo/_CP14/Guidebook_RU/SpeciesTabs/Tiefling.xml"
+  filterEnabled: True
+
+- type: guideEntry
+  crystallPunkAllowed: true
+  id: CP14_RU_Goblin
+  name: Гоблин
+  text: "/ServerInfo/_CP14/Guidebook_RU/SpeciesTabs/Goblin.xml"
   filterEnabled: True
