--- a/Resources/Prototypes/_CP14/Damage/modifier_sets.yml
+++ b/Resources/Prototypes/_CP14/Damage/modifier_sets.yml
@@ -53,3 +53,15 @@
   coefficients:
     Heat: 0.5
     Cold: 1.5
+
+- type: damageModifierSet
+  id: CP14Goblin
+  coefficients:
+    Blunt: 1.5
+    Slash: 1.5
+    Piercing: 1.5
+    Heat: 1.5
+    Cold: 1.5
+    Shock: 1.5
+    Poison: 0.5
+    Caustic: 0.5
