--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Physical/T0_Sprint.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Physical/T0_Sprint.yml
@@ -7,7 +7,7 @@
     sprite: _CP14/Effects/Magic/spells_icons.rsi
     state: sprint
   - type: CP14MagicEffectCastSlowdown
-    speedMultiplier: 1.4
+    speedMultiplier: 1.3
   - type: CP14MagicEffectStaminaCost
     stamina: 3
   - type: CP14MagicEffect
@@ -27,3 +27,13 @@
       cooldown: 2
       castTime: 10
       hidden: true
+
+- type: entity
+  parent: CP14ActionSpellSprint
+  id: CP14ActionSpellSprintGoblin
+  name: Goblin agility
+  components:
+  - type: CP14MagicEffectCastSlowdown
+    speedMultiplier: 1.5
+  - type: CP14MagicEffectStaminaCost
+    stamina: 5
