--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/goblin.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/goblin.yml
@@ -26,6 +26,35 @@
     requiredLegs: 2
   - type: Bloodstream
     bloodReagent: CP14BloodGoblin
+  - type: Fixtures
+    fixtures: # Smaller hitbox & less weight
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.25
+        density: 100
+        restitution: 0.0
+        mask:
+        - MobMask
+        layer:
+        - MobLayer
+  - type: Damageable
+    damageContainer: Biological
+    damageModifierSet: CP14Goblin #+25% all damage, -50% poison
+  - type: Stamina
+    decay: 5 # 3 default
+    critThreshold: 120 # 100 default
+    stunTime: 4 #6 default
+  - type: CP14MagicEnergyContainer #SMALL mana container
+    maxEnergy: 25
+    energy: 25
+  - type: CP14MagicEnergyDraw #Cool x3 mana regen!
+    energy: 1.5
+    delay: 3
+  - type: CP14SpellStorage
+    grantAccessToSelf: true
+    spells:
+    - CP14ActionSpellSprintGoblin
   - type: Hands
     handDisplacement:
       sizeMaps:
