--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/shovel.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/shovel.yml
@@ -3,6 +3,7 @@
   modifiers:
   - !type:AddComponents
     components:
+    - type: Shovel
     - type: ToolTileCompatible
     - type: Tool
       qualities:
