--- a/Resources/Prototypes/_CP14/Loadouts/Misc/undead_startinggear.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Misc/undead_startinggear.yml
@@ -32,30 +32,14 @@
     head: CP14ClothingHeadBeretRed
 
 - type: startingGear
-  id: CP14MobUndeadHard1
-  equipment:
-    cloak: CP14ClothingCloakInfantryCuirass
-    shirt: CP14ClothingShirtMercenary
-    pants: CP14ClothingPantsMercenaryTrousers
-    shoes: CP14ClothingShoesBlack
-    back: CP14BaseTwoHandedSword
-    head: CP14ClothingHeadBeretMercenary
-
-- type: startingGear
-  id: CP14MobUndeadHard2
-  equipment:
-    cloak: CP14ClothingCloakCuirassLoincloth
-    shirt: CP14ClothingShirtMercenary
-    pants: CP14ClothingPantsMercenaryTrousers
-    shoes: CP14ClothingShoesBlack
-    back: CP14BaseShield
-    head: CP14ClothingHeadCapellina
-    mask: CP14ClothingMaskSteelMask
-
-- type: startingGear
   id: CP14MobSkeleton
   equipment:
     pants: CP14ClothingPantsLoincloth
     neck: CP14ModularSkeletonHalberd
   inhand:
     - CP14TorchIgnited
+
+- type: startingGear
+  id: CP14MobSkeletonCloset
+  equipment:
+    pants: CP14ClothingPantsLoincloth
